# Aleem-Voice-Agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
aleem-voice-agent/: livekit.toml  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: livekit_agent.py  main.py
backend/app/core/: __init__.py  celery_app.py  config.py  database.py  logging.py  security.py
backend/app/middleware/: __init__.py  error_handlers.py  rate_limiter.py  request_id.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  call_log.py  doctor.py  ehr_sync.py  enums.py  notification.py  patient.py  transcript.py  user.py
backend/app/routes/: __init__.py  appointments.py  audit.py  auth.py  calls.py  dashboard.py  doctors.py  ehr.py  notifications.py  patients.py  public.py  schedules.py  voice.py  workflow.py
backend/app/schemas/: __init__.py  appointment.py  common.py  schedule.py
backend/app/scripts/: seed_doctors.py  setup_sip_dispatch.py
backend/app/services/: __init__.py  appointment_service.py  audit_service.py  doctor_service.py  ehr_service.py  intent_extractor.py  livekit_service.py  llm_service.py  patient_service.py  schedule_service.py  scheduling_engine.py  voice_agent.py  websocket_manager.py  workflow_engine.py
backend/app/tasks/: __init__.py  analytics_tasks.py  ehr_tasks.py  notification_tasks.py
backend/app/utils/: __init__.py  constants.py  helpers.py  validators.py
backend/tests/: conftest.py  test_health.py  test_validators.py
docker/: mongo-init.js  nginx.conf
(+47 files in other folders)
