[project]
name = "aleem-voice-agent"
version = "2.0.0"
description = "AI Hospital Voice Agent & EHR System"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F401", "W291", "W292"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
